--- a/pydrive2/test/settings/test_oauth_test_07.yaml
+++ b/pydrive2/test/settings/test_oauth_test_07.yaml
@@ -1,10 +1,9 @@
 client_config_backend: service
 service_config:
-  client_service_email: your-service-account-email
-  client_service_json_file_path: your-file-path.json
+  client_json_file_path: your-file-path.json
 
 save_credentials: True
-save_credentials_backend: file
+save_credentials_backend: json
 save_credentials_file: credentials/7.dat
 
 oauth_scope:
