--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         python-version: ${{ matrix.pyv }}
 
     - name: Install dependencies
-      run: python -m pip install -e '.[tests]'
+      run: python -m pip install -e '.[fsspec, tests]'
 
     - name: Test
       run: python -m pytest -m "not manual"
