--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,11 @@ name: Tests
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
         os: [ubuntu-18.04, macos-10.15, windows-2019]
-        pyv: ["3.6", "3.7", "3.8", "3.9", "3.10.0-beta.2"]
+        pyv: ["3.6", "3.7", "3.8", "3.9"]
 
     steps:
     - uses: actions/checkout@v2
