--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-18.04, macos-10.15, windows-2019]
         pyv: ["3.6", "3.7", "3.8", "3.9"]
