--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04, macos-10.15, windows-2019]
-        pyv: ["3.6", "3.7", "3.8", "3.9"]
+        # temporarily reduced to just linux + py36
+        os: [ubuntu-18.04]
+        pyv: ["3.6"]
 
     steps:
     - uses: actions/checkout@v2
