--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ repos:
 - hooks:
   - id: black
     language_version: python3
-  repo: https://github.com/ambv/black
+  repo: https://github.com/psf/black
   rev: 22.3.0
 - hooks:
   - id: flake8
