--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       max-parallel: 3
       matrix:
         os: [ubuntu-18.04, macos-10.15, windows-2019]
-        pyv: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        pyv: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
