update tests workflow to run on external PRs
pull_request_target - workflow runs in the context of the target branch, abusing environment to introduce an approval process

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,13 +2,19 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - '*'
+  pull_request_target:
 
 name: Tests
 
 jobs:
+  authorize:
+    environment:
+      ${{ (github.event_name == 'pull_request_target' &&
+      github.event.pull_request.head.repo.full_name != github.repository) &&
+      'external' || 'internal' }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo ✓
   test:
     runs-on: ${{ matrix.os }}
 
