gha: tests: add workaround for pull_request_target
Fixes #209

Kudos @shcheklein

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+	# NOTE: needed for pull_request_target to use PR code
+        ref: ${{ github.event.pull_request.head.sha || github.ref }}
 
     - uses: actions/setup-python@v4
       with:
