build: add setuptools_scm
Avoids having us to bump the version manually.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+[build-system]
+requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
+
+[tool.setuptools_scm]
+
 [tool.black]
 line-length = 79
 include = '\.pyi?$'
