--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Build
       run: |
         pip install -U -r docs/requirements.txt
+        pip install .
         sphinx-build docs dist/site -b dirhtml -a
 
     - name: Publish
