--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Build
       run: |
         pip install -U -r docs/requirements.txt
-        pip install .
+        pip install ".[fsspec]"
         sphinx-build docs dist/site -b dirhtml -a
 
     - name: Publish
