--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,5 +7,5 @@ repos:
 - hooks:
   - id: flake8
     language_version: python3
-  repo: https://gitlab.com/pycqa/flake8
-  rev: 4.0.1
+  repo: https://github.com/PyCQA/flake8
+  rev: 5.0.4
