--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        os: [ubuntu-22.04, macos-11, windows-2019]
-        pyv: ["3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-lasest, macos-latest, windows-latest]
+        pyv: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
