--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        os: [ubuntu-lasest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         pyv: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
